...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dP0-CA-iPq">
                                        <rect key="frame" x="153.66666666666666" y="8" width="106.66666666666666" height="39.333333333333336"/>
                                        <accessibility key="accessibilityConfiguration" label="twoplayers"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                        <state key="normal" title="3 Players"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Enter Player Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GdY-XI-GLe">
                                        <rect key="frame" x="15" y="8" width="384" height="33.666666666666664"/>
                                        <accessibility key="accessibilityConfiguration" label="player1name"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Enter Player Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aiH-6r-TSf">
                                        <rect key="frame" x="15" y="46.666666666666686" width="384" height="33.666666666666657"/>
                                        <accessibility key="accessibilityConfiguration" label="player2name"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ahl-1a-bVZ">
                                <rect key="frame" x="295" y="664.33333333333337" width="91" height="55"/>
                                <accessibility key="accessibilityConfiguration" label="NEXT_BTN"/>
                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                <state key="normal" title="NEXT"/>
...
                                <rect key="frame" x="132" y="328" width="150" height="80"/>
                                <color key="backgroundColor" red="0.50427159300544977" green="0.77056928146743864" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" label="rankgenbtn"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="GENERATE RANK">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6vj-Od-mfK">
                                <rect key="frame" x="295" y="664.33333333333337" width="91" height="55"/>
                                <accessibility key="accessibilityConfiguration" label="gamepagenavbtn"/>
                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                <state key="normal" title="NEXT"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="center" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="uUS-rK-aQD">
                                <rect key="frame" x="151.66666666666666" y="507.66666666666674" width="110.66666666666666" height="55"/>
                                <accessibility key="accessibilityConfiguration" label="userinput"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lDW-5g-uUn">
                                        <rect key="frame" x="334" y="0.0" width="80" height="50"/>
                                        <accessibility key="accessibilityConfiguration" label="setuserinput"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                        <state key="normal" title="SET"/>
...
